--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,20 @@ body {
   );
 }
 
+#root {
+  width: 100%;
+  height: 60%;
+  max-width: 500px;
+  background-color: var(--color-bg-dark);
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  /* by https://cssgenerator.org/box-shadow-css-generator.html */
+  box-shadow: 10px 16px 44px 1px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 10px 16px 44px 1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 16px 44px 1px rgba(0, 0, 0, 0.75);
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
