--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,4 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  background-color: var(--color-bg-dark);
+  border-bottom: 1px solid var(--color-grey);
 }
