--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   --color-text: #22243b;
   --color-accent: #f16e03;
   --color-white: white;
+  --color-scrollbar: #aaa7a7;
 }
 
 body {
@@ -66,4 +67,18 @@ button {
 
 * {
   box-sizing: border-box;
+}
+
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--color-bg-dark);
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--color-scrollbar);
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-accent);
 }
