--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,6 +5,21 @@
 
   background-color: var(--color-bg-dark);
   border-bottom: 1px solid var(--color-grey);
+
+  padding: 0 0.5rem;
+}
+
+.mode {
+  background-color: transparent;
+  color: var(--color-text);
+  font-size: 1.5rem;
+  cursor: pointer;
+  transition: all 150ms ease-out;
+}
+
+.mode:hover {
+  transform: scale(1.1);
+  color: var(--color-accent);
 }
 
 .filters {
